--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -1,1 +1,42 @@
-steak is yummy
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+     <title>My Recipe Website</title>
+</head>
+<body>
+  <h1> Steak </h1> 
+
+  <img src="steak.jpeg" alt="image of a cooked steak">
+
+  <h3>Steak is a food that can be described as tender, flavorful, juicy, and cooked to perfection; in fact, most consumers describe their ideal steak as just that:<p>"A tender, flavorful, medium-rare steak that isn't overly salty." "Tender, juicy, cooked perfectly and perfectly seasoned."</p> </h3>
+
+  <h2> How to prepare the steak</h2>
+  <p>
+    <h3>Season the steak with salt up to 2 hrs before, then with pepper just before cooking.
+Heat a heavy-based frying pan until very hot but not smoking.
+Drizzle some oil into the pan and leave for a moment.
+Add the steak, a knob of butter, some garlic and robust herbs, if you want.
+Sear evenly on each side for our recommended time, turning every minute for the best caramelised crust.
+Leave to rest on a board or warm plate for about 5 mins.
+Serve the steak whole or carved into slices with the resting juices poured over.</h3>
+  </p>
+
+  <h2>Ingredients for the steak</h2>
+   <ul>
+       <li>Beef</li>
+       <li>Salt</li>
+       <li>Black Pepper</li>
+       <li>Basil</li>
+       <li>Onion</li>
+       <li>Parsley</li>
+       <li>Garlic</li>
+       <li>Melted Butter</li>
+       <li>BBQ Sauce</li>
+   </ul>
+
+
+
+
+</body>
+</html>
