--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -14,11 +14,10 @@
   <h2> How to prepare the steak</h2>
   <p>
     <h3>Season the steak with salt up to 2 hrs before, then with pepper just before cooking.
-Heat a heavy-based frying pan until very hot but not smoking.
 Drizzle some oil into the pan and leave for a moment.
 Add the steak, a knob of butter, some garlic and robust herbs, if you want.
 Sear evenly on each side for our recommended time, turning every minute for the best caramelised crust.
-Leave to rest on a board or warm plate for about 5 mins.
+Leave to rServeest on a board or warm plate for about 5 mins.
 Serve the steak whole or carved into slices with the resting juices poured over.</h3>
   </p>
 
@@ -35,8 +34,16 @@ Serve the steak whole or carved into slices with the resting juices poured over.
        <li>BBQ Sauce</li>
    </ul>
 
-
-
-
+   <h2>Steps to prepare a delicious steak</h2>
+    <ol>
+        <li>Season the steak with salt up to 2 hrs before, then with pepper just before cooking.</li>
+        <li>Heat the pan until it becomes very hot but do not allow it to smoke</li>
+        <li>Drizzle some oil into the pan and leave for a moment.</li>
+        <li>Add the steak, a knob of butter, some garlic and robust herbs, if you want.</li>
+        <li>Sear evenly on each side for our recommended time, turning every minute for the best caramelised crust.
+            Leave to rest on a board or warm plate for about 5 mins.</li>
+        <li>Serve the steak whole or carved into slices with the resting juices poured over.</li>
+    </ol>
+    <p>Do you want to know more on how to make a steak? If yes <a href="https://guardian.ng/life/ingredients-and-how-to-make-homemade-beef-steak/">click here</a> </p>
 </body>
 </html>
